--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.13.2",
     "framer-motion": "^11.15.0",
     "next": "15.0.4",
     "next-sitemap": "^4.2.3",
