--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.13.2",
+    "date-fns": "^4.1.0",
     "framer-motion": "^11.15.0",
     "next": "15.0.4",
     "next-sitemap": "^4.2.3",
