--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.13.2",
     "date-fns": "^4.1.0",
+    "firebase": "^12.6.0",
     "framer-motion": "^11.15.0",
     "next": "15.0.5",
     "next-sitemap": "^4.2.3",
